Update date/month handling